fixed unecpected line break in date and sunrise/sunset

--- a/src/components/Current/MainInfo/MainInfo.module.scss
+++ b/src/components/Current/MainInfo/MainInfo.module.scss
@@ -82,8 +82,9 @@
   }
   & .date {
     display: flex;
-    margin: 0 1rem;
-    font-size: var(--small-head-font-size);
+    margin: 0;
+    margin-right: 1rem;
+    font-size: calc(var(--small-head-font-size) - 1px);
     @media only screen and (max-width: 374px) {
       font-size: var(--big-text-font-size);
     }
@@ -99,7 +100,7 @@
         margin-left: 1rem;
         margin-top: 2px;
         @media only screen and (max-width: 374px) {
-          font-size: var(--medium-text-font-size);
+          font-size: calc(var(--medium-text-font-size) - 2px);
         }
       }
 
